<resources>
    <string name="app_name">Dots</string>
    <string name="timed">Timed</string>
    <string name="moves">Moves</string>
    <string name="highscores">Highscores</string>
    <string name="title_activity_settings">Settings</string>
    <string name="colorblindTitle">Color Blind Mode</string>
    <string name="colorblindSummary">Add characters to dots to distinguish colors</string>
    <string name="movesText">Moves:</string>
    <string name="timeLabel">Time:</string>
    <string name="scoreLabel">Score:</string>
    <string-array name="pref_color_names">
        <item>Gray</item>
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
    </string-array>
    <string-array name="pref_color_values">
        <item>#646464</item>
        <item>#b71c1c</item>
        <item>#1cb71c</item>
        <item>#1c1cb7</item>
    </string-array>
</resources>
