<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background01">

    <TextView
        android:id="@+id/title"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:fontFamily="casual"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:padding="15dp"
        android:columnCount="2"
        android:rowCount="2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <Button
            android:id="@+id/timedGame"
            style="@style/button"
            android:layout_marginRight="10dp"
            android:onClick="timedGameClick"
            android:text="@string/timed" />

        <Button
            android:id="@+id/movesGame"
            style="@style/button"
            android:onClick="movesGameClick"
            android:text="@string/moves" />

        <Button
            android:id="@+id/highScores"
            style="@style/button"
            android:layout_marginRight="10dp"
            android:onClick="highscoresClick"
            android:text="@string/highscores" />

        <Button
            android:id="@+id/settingsButton"
            style="@style/button"
            android:layout_marginTop="10dp"
            android:onClick="settingsClick"
            android:text="@string/title_activity_settings" />

    </GridLayout>

</android.support.constraint.ConstraintLayout>
